--- a/_posts/2020-12-28-with-zsh.md
+++ b/_posts/2020-12-28-with-zsh.md
@@ -1,8 +1,8 @@
 ---
-layout: post
-title: 'codinating zsh'
+title: "codinating zsh"
 date: 2020-12-28 03:25
-category: jekyll update
+category: etc
+tag: zsh
 ---
 
 **install on-my-zsh**
