--- a/_posts/2021-01-21-test.md
+++ b/_posts/2021-01-21-test.md
@@ -1,7 +1,6 @@
 ---
 title: "test"
-categories: [Digging, Digging]
-date: 2021-01-21-02:17:00
+categories: [Digging, 이번까진연습이다]
 tag: [ruby, rbenv, gem, jkeyll]
 ---
 
