post: regiter fix

--- a/_posts/2021-01-21-register.md
+++ b/_posts/2021-01-21-register.md
@@ -1,11 +1,9 @@
 ---
-title: "Process와 Thread를 파다보니 엉뚱하게도 Register에 도착해있다."
+title: "Process와 Thread를 파다보니 엉뚱하게 Register에 도착해있다."
 date: 2021-01-21-21:30:00
 categories: [Digging, cs]
 tag: [cpu, register, x64, x32]
 ---
-
-# Process와 Thread를 파다보니 엉뚱하게도 Register에 도착해있다.
 
 하루종일 화면을 뚫어져라 바라보며 스트레스를 받은건지 두통이 심하다.  
 오늘 아침 분명 호기롭게 `process` 와 `thread` 에 대해 공부하려고 구글로 출발했는데,  
@@ -22,7 +20,7 @@ tag: [cpu, register, x64, x32]
 <br>
 <br>
 
-## `Register` 에대해서 좀 알아야 겠어서 공부를 해봤다.
+## Register에 대해서 좀 알아야 겠어서 공부를 해봤다.
 
 <br>
 <br>
