post: regiter fix

--- a/_posts/2021-01-21-register.md
+++ b/_posts/2021-01-21-register.md
@@ -32,9 +32,8 @@ tag: [cpu, register, x64, x32]
 
 <br>
 
-  <img width="700" src="https://user-images.githubusercontent.com/70361152/105347347-1e336a80-5c2a-11eb-9e46-ceb751006f92.png">
+![img](https://user-images.githubusercontent.com/70361152/105347347-1e336a80-5c2a-11eb-9e46-ceb751006f92.png)
 
-<br>
 <br>
 
 `Register` 는 영특한 CPU의 기민한 수행비서이다.  
