--- a/_posts/2021-01-21-register.md
+++ b/_posts/2021-01-21-register.md
@@ -18,12 +18,9 @@ tag: [cpu, register, x64, x32]
 
 <br>
 <br>
-<br>
 
 ## Register에 대해서 좀 알아야 겠어서 공부를 해봤다.
 
-<br>
-<br>
   <br>
 
 ### 1. Register : 영특한 CPU의 기민한 수행비서
@@ -54,7 +51,7 @@ tag: [cpu, register, x64, x32]
 이런 느낌으로...
 
 그리고 이제서야 `ALU(Arithmetic Logig Unit)` 가 뭔지 조금 감이 왔고, 반가산기와 가산기 구현이 어떤 의미에서 시작된 거였는지도 알 것 같다.
-오늘 학습하려했던게 사실 `CPU(Central Processing Unit)` 에 대한 내용은 아니었지만 궁금한걸 떠나서 이 부분을 모르고는 이해가 안갈 것 같은 나는 여기까지 오게 됐고, 이제서야 그그 동안 `CPU` 라고 불렀던게 뭔지 조금 알 것만 같다.
+오늘 학습하려했던게 사실 `CPU(Central Processing Unit)` 에 대한 내용은 아니었지만 궁금한걸 떠나서 이 부분을 모르고는 이해가 안갈 것 같은 나는 여기까지 오게 됐고, 이제서야 그 동안 `CPU` 라고 불렀던게 뭔지 조금 알 것만 같다.
 
 <br> <br> <br>
 
