post: assembly link

--- a/_posts/2021-01-21-register.md
+++ b/_posts/2021-01-21-register.md
@@ -71,7 +71,7 @@ tag: [cpu, register, x64, x32]
 <br>
 
 그림에서 볼 때, `R` 로 시작되는건 64비트이다. 32비트는 `E` 로 시작하는데 개형은 거의 비슷하다고 한다.  
-오늘 나는 이 중 `프로그램 실행 관련 레지스터` 까지 들여다보고 말게 되었다.
+오늘 나는 이 중 [`프로그램 실행 관련 레지스터`](https://juddroid.github.io/posts/assembly/) 까지 들여다보고 말게 되었다.
 
 <br>
 <br>
