post: assembly process memory model

--- a/_posts/2021-01-21-assembly.md
+++ b/_posts/2021-01-21-assembly.md
@@ -1,5 +1,5 @@
 ---
-title: "메모리 구조(Memory Model), 그리고 생애 첫 어셈블리어(Assembly Language)"
+title: "프로세스 메모리 구조(Memory Model), 그리고 생애 첫 어셈블리어(Assembly Language)"
 date: 2021-01-22-00:46:00
 categories: [Digging, cs]
 tag: [register, assembly, memory model, heap, stack, data]
@@ -9,7 +9,7 @@ tag: [register, assembly, memory model, heap, stack, data]
 
 [레지스터의 용도와 시스템 콜 이해하기](https://www.youtube.com/watch?v=TxWOaKE5w_s&list=PLRx0vPvlEmdAXwJnNtKIVeC27UmwljRYA&index=5)
 
-나도 메모리 구조에 대한 조금 더 구체적이고 명시적인 설명이 필요했기 때문에 바로 열었다.  
+나도 프로세스 메모리 구조에 대한 조금 더 구체적이고 명시적인 설명이 필요했기 때문에 바로 열었다.  
 영상을 보니 대충 무슨 말인지 알겠는데 앞 영상을 안봐서 시원치가 않다.  
 그래서 재생목록을 쭈욱봤더니 `칼리 리눅스` `(Kali Linux)` 로 실습 환경을 구축하고, 실습 중이었다.  
 나에겐 얼마전 `VM` 에 설치하고 예뻐서 그대로 둔 `ubuntu` 가 있다.  
@@ -17,7 +17,7 @@ tag: [register, assembly, memory model, heap, stack, data]
 
 <br>
 
-## 메모리 구조(Memory Model) 찾아왔다가 어셈블리어(Assembly Language) 만난 썰
+## 프로세스 메모리 구조(Memory Model) 찾아왔다가 어셈블리어(Assembly Language) 만난 썰
 
 <br>
 
@@ -206,7 +206,7 @@ tag: [register, assembly, memory model, heap, stack, data]
 
 <br>
 
-### 3. 메모리 구조(Memory Model)
+### 3. 프로세스 메모리 구조(Memory Model)
 
 ---
 
