post: catigories fix

--- a/_posts/2021-01-21-assembly.md
+++ b/_posts/2021-01-21-assembly.md
@@ -1,7 +1,7 @@
 ---
-title: "프로세스 메모리 구조(Memory Model), 그리고 생애 첫 어셈블리어(Assembly Language)"
+title: "[CS] 프로세스 메모리 구조(Memory Model), 그리고 생애 첫 어셈블리어(Assembly Language)"
 date: 2021-01-22-00:46:00
-categories: [Digging, cs]
+categories: [Digging, Computer Science]
 tag: [register, assembly, memory model, heap, stack, data]
 ---
 
