--- a/_posts/2021-01-21-register.md
+++ b/_posts/2021-01-21-register.md
@@ -1,7 +1,7 @@
 ---
-title: "Process와 Thread를 파다보니 엉뚱하게 Register에 도착해있다."
+title: "[CS] Process와 Thread를 파다보니 엉뚱하게 Register에 도착해있다."
 date: 2021-01-21-21:30:00
-categories: [Digging, cs]
+categories: [Digging, Computer Science]
 tag: [cpu, register, x64, x32]
 ---
 
