--- a/_posts/2021-01-25-process.md
+++ b/_posts/2021-01-25-process.md
@@ -1,7 +1,7 @@
 ---
-title: "드디어 Process & Thread 시뮬레이션 구현해보기"
-date: 2021-01-22-21:30:00
-categories: [Digging, cs]
+title: "[CS] 드디어 Process & Thread 시뮬레이션 해보기"
+date: 2021-01-25-06:15:00
+categories: [Digging, Computer Science]
 tag: [process, thread]
 ---
 
@@ -45,7 +45,7 @@ tag: [process, thread]
 얼핏보기에 프로세스 강제종료 같은거 시키면 자식 스레드는 부모를 못만나고 사망하게 된다는 슬픈이야기 같다.
 '미안하다 그 동안의 스레드들아... 너희들은 이번 기회에 내게 충분히 갚아줬다...'
 
-1. **Process 생성**
+**1. Process 생성**
 
 
 - 공부하면서 떠오르는 생각으로는 모든 `Process` 는 하나 이상의 `thread` 를 가지므로 `single thread` 로 먼저 구현해보고, `multi threads` 는 기존의 `Process` 를 `extends` 하는 방식으로 해볼까 하는 계획을 세웠다.
@@ -71,7 +71,8 @@ tag: [process, thread]
   - `PC` 로 상태관리를 해줄 `current`
   
 
-2. **Queue 생성**
+**2. Queue 생성**
+
 - `queue` 라는걸 머리 속으로 생각은 이미했지만 실제로 구현하려니 생각보다 쉽지 않았다.
   
   ```js
@@ -91,89 +92,90 @@ tag: [process, thread]
     - `count` 로 처리 완료시간을 보여줄 예정
     - `keepGoing` 은 조금 꼼수처럼 됐지만 마지막에 `setTimeOut` 으로 `exec` 할 때, `process` 를 마쳤음에도 불구하고 계속 실행되는걸 막으려고 `boolean` 을 달아놨다.
   
-3. **Process Life Cycle**
 
-   ![process-state](https://user-images.githubusercontent.com/70361152/105641442-5acfc200-5ec7-11eb-9270-6138fe50e5a0.png)
+**3. Process Life Cycle**
 
-   [Process Life Cycle](https://zitoc.com/process-life-cycle/)
+![process-state](https://user-images.githubusercontent.com/70361152/105641442-5acfc200-5ec7-11eb-9270-6138fe50e5a0.png)
 
-   
+[Process Life Cycle](https://zitoc.com/process-life-cycle/)
 
-   - 구현해보고나니 좀 이해가 가는데 처음 이 그림을 보고 있을땐 너무 막막했다.
 
-     ```js
-     class Queue {
-       constructor(processList) {
-         this.processList = processList;
-         this.queue = null;
-         this.count = 0;
-         this.keepGoing = true;
-       }
-     
-       initializing() {
-         for (const key of this.processList) {
-           key.current = status.WAITING;
-         }
-         this.queue = this.processList[0];
-         this.print();
-       }
-     
-       nextQue() {
-         if (this.isTerminated()) {
-           this.queue.current = status.TERMINATED;
-         }
-     
-         if (this.queue.current === status.RUNNING) {
-           this.queue.current = status.WAITING;
-         }
-     
-         let terminated = this.processList.filter((el) => el.current === status.TERMINATED);
-         let waiting = this.processList.filter((el) => el.current === status.WAITING);
-         let elapsed = waiting.filter((el) => el.elapsed < this.queue.elapsed);
-     
-         if (terminated.length === this.processList.length) {
-           this.print();
-           this.keepGoing = false;
-           return this.printExit();
-         }
-         if (elapsed.length === 0) {
-           this.queue = waiting[0];
-         } else if (elapsed.length === 0 && waiting.length === 0) {
-           this.queue = this.queue;
-         } else {
-           this.queue = elapsed[0];
-         }
-       }
-     
-       processExecutor() {
-         this.queue.elapsed++;
-         this.queue.current = status.RUNNING;
-         this.print();
-         this.nextQue();
-       }
-     
-       isTerminated() {
-         return this.queue.elapsed === this.queue.second;
-       }
-     }
-     ```
 
-     - 그림에 따라서 `process life cycle` 을 `Queue` 의 `method` 로 구현해봤다.
-     - `initializing` : 생성된 `prcoess` 는 `Queue` 에 들어올 때, `current` 가 `ready` 에서  `waiting` 으로 바뀌고, 첫 번째 `process` 가 `queue` 에 담긴다.
-     - `processExcutor` : `queue` 에 들어온 `prcess` 를 실행하고, `print` 해준 뒤, `nextQue` 로 보낸다.
-     - `nextQue` : 다음 `queue` 를 잡아준다.
-       - 이 부분이 가장 시간을 많이 잡아먹었다.
-       - 함수 종료조건과 스트림 함수를 더 연습해야 될 것 같다.
-     - **`nextQue` 에서 다음 큐를 잡는 조건**
-       - `isTermintaed` : `terminated` 된 `process` 가 있으면 `queue` 에서 제외 시킨다.
-       - `queue` 에 `runnning` 인 상태가 있으면 `wainting` 시켜준다.
-       - `terminated` 인 상태를 `filter` 로 걸러서 `process` 의 개수와 같으면 `excutor` 를 종료시킨다.
-       - `waiting` 인 상태를 `filter` 로 걸러서 `elapsed` 가 `queue` 보다 작은 `process` 를 다음 `queue` 에 담아준다.
-         - 사실 이 부분을 `waiting` 인 상태 중에 `elapsed` 가 가장 작은 `process` 를 다음 `queue` 에 담는 조건으로 수정하고 싶었는데 수정을 못했다.
-         - 그래서 `process` 가 3개 뿐이고, `single thread` 를 사용할 때는 `process` 가 차곡차곡 순서대로 실행되지만 `thread` 의 개수가 달라지면 일정 `process` 가 먼저 실행되는 현상이 발생한다.
-       - 한 개의 `process` 만 남겨두고 다른 모든 `process` 가 `terminated` 되면 `running` 인 상태의 `process` 를 `queue` 에 담아 작업을 마쳐준다.
+- 구현해보고나니 좀 이해가 가는데 처음 이 그림을 보고 있을땐 너무 막막했다.
 
-   <br> <br> <br>
+  ```js
+  class Queue {
+    constructor(processList) {
+      this.processList = processList;
+      this.queue = null;
+      this.count = 0;
+      this.keepGoing = true;
+    }
+  
+    initializing() {
+      for (const key of this.processList) {
+        key.current = status.WAITING;
+      }
+      this.queue = this.processList[0];
+      this.print();
+    }
+  
+    nextQue() {
+      if (this.isTerminated()) {
+        this.queue.current = status.TERMINATED;
+      }
+  
+      if (this.queue.current === status.RUNNING) {
+        this.queue.current = status.WAITING;
+      }
+  
+      let terminated = this.processList.filter((el) => el.current === status.TERMINATED);
+      let waiting = this.processList.filter((el) => el.current === status.WAITING);
+      let elapsed = waiting.filter((el) => el.elapsed < this.queue.elapsed);
+  
+      if (terminated.length === this.processList.length) {
+        this.print();
+        this.keepGoing = false;
+        return this.printExit();
+      }
+      if (elapsed.length === 0) {
+        this.queue = waiting[0];
+      } else if (elapsed.length === 0 && waiting.length === 0) {
+        this.queue = this.queue;
+      } else {
+        this.queue = elapsed[0];
+      }
+    }
+  
+    processExecutor() {
+      this.queue.elapsed++;
+      this.queue.current = status.RUNNING;
+      this.print();
+      this.nextQue();
+    }
+  
+    isTerminated() {
+      return this.queue.elapsed === this.queue.second;
+    }
+  }
+  ```
+
+  - 그림에 따라서 `process life cycle` 을 `Queue` 의 `method` 로 구현해봤다.
+  - `initializing` : 생성된 `prcoess` 는 `Queue` 에 들어올 때, `current` 가 `ready` 에서  `waiting` 으로 바뀌고, 첫 번째 `process` 가 `queue` 에 담긴다.
+  - `processExcutor` : `queue` 에 들어온 `prcess` 를 실행하고, `print` 해준 뒤, `nextQue` 로 보낸다.
+  - `nextQue` : 다음 `queue` 를 잡아준다.
+    - 이 부분이 가장 시간을 많이 잡아먹었다.
+    - 함수 종료조건과 스트림 함수를 더 연습해야 될 것 같다.
+  - **`nextQue` 에서 다음 큐를 잡는 조건**
+    - `isTermintaed` : `terminated` 된 `process` 가 있으면 `queue` 에서 제외 시킨다.
+    - `queue` 에 `runnning` 인 상태가 있으면 `wainting` 시켜준다.
+    - `terminated` 인 상태를 `filter` 로 걸러서 `process` 의 개수와 같으면 `excutor` 를 종료시킨다.
+    - `waiting` 인 상태를 `filter` 로 걸러서 `elapsed` 가 `queue` 보다 작은 `process` 를 다음 `queue` 에 담아준다.
+      - 사실 이 부분을 `waiting` 인 상태 중에 `elapsed` 가 가장 작은 `process` 를 다음 `queue` 에 담는 조건으로 수정하고 싶었는데 수정을 못했다.
+      - 그래서 `process` 가 3개 뿐이고, `single thread` 를 사용할 때는 `process` 가 차곡차곡 순서대로 실행되지만 `thread` 의 개수가 달라지면 일정 `process` 가 먼저 실행되는 현상이 발생한다.
+    - 한 개의 `process` 만 남겨두고 다른 모든 `process` 가 `terminated` 되면 `running` 인 상태의 `process` 를 `queue` 에 담아 작업을 마쳐준다.
+
+<br> <br> <br>
 
 ### 2. Process simulator (Multi Threads)
 
@@ -206,7 +208,7 @@ tag: [process, thread]
 
 
 
-1. **Thread 생성**
+ **1. Thread 생성**
 
 - 시뮬레이션도 시뮬레이션이지만 `class` 자체도 생소하고, `extends` 를 써봐야겠다는 생각에 좀 재미있었다.
 
@@ -236,7 +238,7 @@ tag: [process, thread]
 
 
 
-2. **ThreadQue 생성**
+**2. ThreadQue 생성**
 
    ```js
    class ThreadQueue extends Queue {
@@ -307,7 +309,7 @@ run();
 
 
 
-2. **Multi Threads**
+**2. Multi Threads**
 
 ![multithread](https://user-images.githubusercontent.com/70361152/105643348-ae93d880-5ed2-11eb-9a50-dcf05ea56d43.gif)
 
