--- a/_posts/2021-01-25-process.md
+++ b/_posts/2021-01-25-process.md
@@ -189,13 +189,15 @@ tag: [process, thread]
 
 - `Process` 안에서 태어난다.
 
-- `Process` 간에는 `context switching` 이 일어나지 않지만 `thread` 끼리는 공유하는 부분이 생긴다.
+- `Process` 간의 `context switching` 은 비용이 비싸다.
 
   ![739f35177ddd7985ac7b8e7211f9f3d4](https://user-images.githubusercontent.com/70361152/105642070-bcddf680-5eca-11eb-9da4-42ffb0101e68.png)
 
   [context switching in the operating system [Explained]](https://www.youtube.com/watch?v=ZxlaE19imws&feature=youtu.be)
 
 - 그러니까 이것 또한 내가 이해한대로 표현해보자면 영특한 `CPU` 라도 `core` 개수가 한 개라면 한 가지 일 밖에 할 수가 없다. 그래서 `process` 는 각각의 `thread` 를 긴밀하게 `switching` 하게되는데, 얼마전에 [`register` 따라 갔다가 봤던 `process` `memory` 중 `stack` 영역](https://juddroid.github.io/posts/assembly/)을 제외한 나머지 부분을 `thread`끼리 공유한채로, `process` 가 요리조리 `thread` 를 바꿔가며 실행하게 된다.
+
+- 따라서 `thread` 는 `process` 에 비해 `context switching` 비용이 싸다.
 
 ![Threads](https://user-images.githubusercontent.com/70361152/105641984-3aedcd80-5eca-11eb-9a43-e7db01e72ab6.png)
 
