--- a/_posts/new/2021-02-03-test2.md
+++ b/_posts/new/2021-02-03-test2.md
@@ -3,7 +3,7 @@
 
 title: "[test2] test2"
 date: 2021-02-03-05:10:00
-categories: [Digging, test2]
+categories: [Digging, Digging]
 tag: [docker, mysql, database]
 ---
 
