--- a/_posts/cs/2021-02-03-http.md
+++ b/_posts/cs/2021-02-03-http.md
@@ -375,6 +375,8 @@ tag: [http, tcp, udp, socket, domain, dns, wire shark]
 
 - 사이트마다 조금씩 차이가 있지만 일단 보기좋게 분리는 잘 되고 있다.
 
+![disneyRequest](https://user-images.githubusercontent.com/70361152/106772610-88fd9080-6683-11eb-87a0-fe81e7c913d7.gif)
+
 
 
 ### 9.  수정 필요한 부분
