post: http fix3

--- a/_posts/cs/2021-02-04-http.md
+++ b/_posts/cs/2021-02-04-http.md
@@ -13,7 +13,7 @@ tag: [http, tcp, udp, socket, domain, dns, wire shark]
 매일보고, 오래봐서 친하다고 생각했던 `HTTP` 와 더욱 친할 필요가 있고,
 앞으로 더더욱 친하게 지낼 수 밖에 없다고 한다.
 
-그런 의미에서 `HTTP` 가 무엇이고, 그에 따라 `borwser` 가 어떻게 작동하는지 이해하기 위해서
+그런 의미에서 `HTTP` 가 무엇이고, 그에 따라 `browser` 가 어떻게 작동하는지 이해하기 위해서
 `Text Browser` 를 만들며 일련의 것들을 알 수 있는데까지 공부하며 이해해 보았다.
 
 언제나 그렇듯 모르는 것에 대해 배울 때, 여러가지 설명을 듣고 보게 되지만
@@ -24,19 +24,19 @@ tag: [http, tcp, udp, socket, domain, dns, wire shark]
 
 ![screenshot092](https://user-images.githubusercontent.com/70361152/106763049-c8bf7a80-6679-11eb-8b5a-dc959a691efa.png)
 
-### 1. HTTP(HyperText Transfer Protocol)는 WEB의 여러 나라들을 돌아다닐 때 사용할 여권의 양식이다.
+### **1. HTTP(HyperText Transfer Protocol)는 WEB의 여러 나라들을 돌아다닐 때 사용할 여권의 양식이다.**
 
 ---
 
 
 
-**말그대로 ''엄청난 텍스트'' 녀석들이 '패킷'이라는 짐을 싸들고 여행을 다닐 때 사용하는 약속 같은거다.**
+<u>**말그대로 ''엄청난 텍스트'' 녀석들이 '패킷'이라는 짐을 싸들고 여행을 다닐 때 사용하는 약속 같은거다.**</u>
 국가들간에 ''너네 나라의 텍스트들이 패킷이라는 짐을 싸들고 우리나라에 오려면 응당 이러이러한 것들은 갖춰서 알려줘야지~'' 라고,
 상호간의 약속을 하고, 패킷들이 여행을 떠날 때, 그 정보를 바탕으로 통신을 하는 것이다. 정확한 설명이 되지 않는걸 알고 있지만 스스로 쉽게 이해하려다보니 이 정도에 머물렀다.
 
 
 
-#### HTTPS 라는 약속도 있는데 이건 좀 더 깐깐하고 안전한 약속이다.
+#### <u>**HTTPS 라는 약속도 있는데 이건 좀 더 깐깐하고 안전한 약속이다.**</u>
 
 얼마전 SSL 에 대해서 공부를 하면서 우리나라 공인인증 방식에 많은 문제가 있음을 깨달았었는데, 그 SSL 방식을 이용한 약속인 것 같다. 이 부분도 분명 차차 공부해야 할 것 같다.
 
@@ -362,6 +362,9 @@ tag: [http, tcp, udp, socket, domain, dns, wire shark]
 
 - `GET / HTTP/1,1` 로 확인
 
+  
+
+
 3. Response Header 와 Body 분리
 
 ![screenshot099](https://user-images.githubusercontent.com/70361152/106768568-5fdb0100-667f-11eb-9129-37c139717c50.png)
@@ -398,7 +401,7 @@ tag: [http, tcp, udp, socket, domain, dns, wire shark]
 - [도메인 ip 여러개](https://en.wikipedia.org/wiki/Round-robin_DNS) (feat. Eamon)
 - [자바스크립트 Promise 쉽게 이해하기](https://joshua1988.github.io/web-development/javascript/promise-for-beginners/)
 - [javascript, async/await 왜 pending 상태인지 이해가 안갑니다..!](https://okky.kr/article/690920)
-- [HTTP/1.1의 Content-Length 필드가 없는경우](https://secretofsh.tistory.com/120)
+- [HTTP의 Content-Length 필드가 없는경우](https://secretofsh.tistory.com/120)
 - [HTTP headers | Content-Length](https://www.geeksforgeeks.org/http-headers-content-length/)
 - [HTTP message body](https://en.wikipedia.org/wiki/HTTP_message_body)
 - [Hypertext Transfer Protocol](https://tools.ietf.org/html/rfc2616#section-9.2)
