post: git(modified)

--- a/_posts/2021-02-11-git.md
+++ b/_posts/2021-02-11-git.md
@@ -1,5 +1,5 @@
 ---
-ittitle: "[HTML/CSS] Git 기본기 연습"
+title: "[HTML/CSS] Git 기본기 연습"
 date: 2021-02-11-02:06:00
 categories: [Digging, git]
 tag: [git]
@@ -136,3 +136,9 @@ $ git branch -d ex-raccoon  # Deleted branch ex-raccoon (was ef47882).
 ## 정리
 
 어느 순간부터 `git` 을 `CLI` 연습해보기 위해서 `GUI` 를 사용하지 않고 있다. 간단하게 commit, push 같은 작업만하고, 혼자서만 작업을 하니 크게 불편함이 없었다. 이제 조금씩 미뤄뒀던 다른 명령어들과 `HEAD` 나 `rebase` 등 너무 헷갈리는 개념들에 대해서 한 번 제대로 이해를 해봐야겠다.
+
+
+
+## 참조
+
+- https://www.atlassian.com/git/tutorials/using-branches/git-checkout
