node debugging 환경세팅

--- a/_posts/2021-02-26-front03-day5.md
+++ b/_posts/2021-02-26-front03-day5.md
@@ -105,7 +105,7 @@ node 환경에서도 평상시엔 vsc에서 `F9` 혹은 `break point`를 걸고 
 - `F5`나 `Ctrl + Shift + D` 를 눌러서 디버깅 탭에 가면 `create configuration` 을 해야한다고 나오는데, 나는 사실 이게 뭔지도 모르겠고, 겁나서 별로 보고 싶지가 않았다.
 - 대충 관련된 메뉴가 있어서 누르면 자동으로 `launch.json` 이 생성되고, 아니면 그냥 직접 생성해서 세팅을 해도 상관이 없다.
 - `nodemon, inspector, path` 까지 설정
-- 설정은 [요기]([Node.js debugging in VS Code with Nodemon](https://github.com/microsoft/vscode-recipes/tree/master/nodemon))를 참고했다.
+- 설정은 [요기](https://github.com/microsoft/vscode-recipes/tree/master/nodemon)를 참고했다.
 
 
 
